Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,9 +20,27 @@
 
     <section class="main-content">
       <h3>
-<a id="ocr" class="anchor" href="#ocr" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>OCR</h3>
+<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h3>
 
-<p>Nextcloud OCR processing for images and PDF with tesseract-ocr, OCRmyPDF and Gearman for asynchronous purpose.</p>
+<p>Install the app from the <a href="https://apps.nextcloud.com">Nextcloud Appstore</a> or download the git <a href="https://github.com/janis91/ocr/releases">release</a> and place the content in owncloud/apps/ or nextcloud/apps/.</p>
+
+<h3>
+<a id="basic-usage" class="anchor" href="#basic-usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Basic usage</h3>
+
+<p>Just click on the menu for a specific file (image or pdf), which you want to be processed or select multiple files (images and/or pdfs) and click on OCR. A little submenu shows up and you have to select a language for the ocr processing engine, then click "Process" and wait until the processing finishes. You will be informed about the status on the top of the screen (notification bar). The Process will create new files called "_OCR.txt" or "_OCR.pdf" appended to the original name. </p>
+
+<h3>
+<a id="screenshots-and-example-usage" class="anchor" href="#screenshots-and-example-usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Screenshots and example usage</h3>
+
+<p>The OCR app gives you much more possibilities for your personal organization.
+<img src="https://raw.githubusercontent.com/janis91/ocr/master/screenshots/sc1.png" alt="Screenshot">
+<em>With OCR you will be able to process all your images and pdf files in order to get the characters in it optically recognized and transformed to a txt file or another pdf which has now a text layer, allowing it to be searched.</em>
+<img src="https://raw.githubusercontent.com/janis91/ocr/master/screenshots/sc2.png" alt="Screenshot">
+<img src="https://raw.githubusercontent.com/janis91/ocr/master/screenshots/sc3.png" alt="Screenshot">
+<em>The great benefit of OCR: It is processing absolutely asynchronous with gearman-server in the background.</em></p>
+
+<h3>
+<a id="have-fun-with-ocr" class="anchor" href="#have-fun-with-ocr" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Have fun with OCR</h3>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/janis91/ocr">OCR</a> is maintained by <a href="https://github.com/janis91">janis91</a>.</span>
