Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <em>With OCR you will be able to process all your images and pdf files in order to get the characters in it optically recognized and transformed to a txt file or another pdf which has now a text layer, allowing it to be searched.</em>
 <img src="https://raw.githubusercontent.com/janis91/ocr/master/screenshots/sc2.png" alt="Screenshot">
 <img src="https://raw.githubusercontent.com/janis91/ocr/master/screenshots/sc3.png" alt="Screenshot">
-<em>The great benefit of OCR: It is processing absolutely asynchronous with gearman-server in the background.</em></p>
+<em>The great benefit of OCR: It is processing absolutely asynchronous in the background.</em></p>
 
 <h3>
 <a id="have-fun-with-ocr" class="anchor" href="#have-fun-with-ocr" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Have fun with OCR</h3>
