--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <h1 class="project-name">OCR</h1>
       <h2 class="project-tagline">Nextcloud OCR processing for images and PDF with tesseract-ocr, OCRmyPDF and messaging system for asynchronous purpose.</h2>
       <a href="https://github.com/janis91/ocr" class="btn">View on GitHub</a>
-      <a href="https://github.com/janis91/ocr/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/janis91/ocr/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://apps.nextcloud.com/apps/ocr" class="btn">View on appstore</a>
+      <a href="installation.html" class="btn">Installation</a>
     </section>
 
     <section class="main-content">
