--- a/installation.html
+++ b/installation.html
@@ -34,7 +34,7 @@
     </section>
     <section class="main-content">
       <h1>
-<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation</h1>
+<a id="administration" class="anchor" href="#administration" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Administration</h1>
 <h2>
 <a id="tesseract" class="anchor" href="#tesseract" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tesseract</h2>
 <p>n order to install Tesseract (which delivers the core OCR capabilities) on Ubuntu or Debian you can just install it via apt-get:</p>
@@ -53,7 +53,7 @@
 <p>For detailed process information regarding the installation look <a href="https://github.com/jbarlow83/OCRmyPDF#installation">here</a>.</p>
 <p><strong>Please consider that the ocrmypdf as well as the tesseract command have to be available for the webserver user.</strong></p>
 
-
+      <p><strong>Update and upgrade the packages from time to time, as sometimes ocrmypdf or tesseract will break as of dependency updates (see <a href="https://github.com/janis91/ocr/wiki/%5BIMPORTANT%5D-Regular-updating">here</a>).</strong></p>
 
 <h3>
 
